checker/tests/output/tuples/ill-typed/bad-tuples-1.stella
ERROR_UNEXPECTED_TUPLE_LENGTH
